--- a/views/list.ejs
+++ b/views/list.ejs
@@ -1,21 +1,25 @@
 <%- include("header") -%>
 
-  <div class="box" id="heading">
-    <h1> <%= listTitle %> </h1>
-  </div>
+<div class="box" id="heading">
+  <h1> <%= listTitle %> </h1>
+</div>
 
-  <div class="box">
-    <% for (let i=0; i < newItems.length; i++){ %>
-    <% if (newItems[i] !== "") { %>
+<div class="box">
+
+  <% newItems.forEach(function(item){ %>
+  <form action="/delete" method="post">
     <div class="item">
-      <input type="checkbox">
-      <p><%= newItems[i] %></p>
-    </div>
-    <% }} %>
+      <input type="checkbox" name="itemCheckbox" onChange="this.form.submit()">
+      <p><%= item.name %></p>
+      </div>
+      </form> 
+
+    <% }); %>
+
     <form class="item" action="/" method="post">
       <input type="text" name="inputData" placeholder="New Item" autocomplete="off" autofocus>
       <button type="submit" name="list" value="<%= listTitle %>">+</button>
     </form>
-  </div>
+</div>
 
 <%- include("footer") -%>
