--- a/views/list.ejs
+++ b/views/list.ejs
@@ -9,17 +9,17 @@
   <% newItems.forEach(function(item){ %>
   <form action="/delete" method="post">
     <div class="item">
-      <input type="checkbox" name="itemCheckbox" onChange="this.form.submit()">
+      <input type="checkbox" name="checkbox" value="<%= item._id %>" onChange="this.form.submit()">
       <p><%= item.name %></p>
-      </div>
-      </form> 
+    </div>
+  </form>
 
-    <% }); %>
+  <% }); %>
 
-    <form class="item" action="/" method="post">
-      <input type="text" name="inputData" placeholder="New Item" autocomplete="off" autofocus>
-      <button type="submit" name="list" value="<%= listTitle %>">+</button>
-    </form>
+  <form class="item" action="/" method="post">
+    <input type="text" name="inputData" placeholder="New Item" autocomplete="off" autofocus>
+    <button type="submit" name="list" value="<%= listTitle %>">+</button>
+  </form>
 </div>
 
 <%- include("footer") -%>
